# memtruth

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.es.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  findings.md  pom.xml  progress.md  task_plan.md
.github/: dependabot.yml  pull_request_template.md
docs/: cli.md  error-handling.md  evidence-schema.md  homebrew.md  install.md  java-integration.md  oss-pmf-gap.md  parser-capability-matrix.md  parser-profiling.md  pdf-parser-runtime-prd.md  release.md
java/: pom.xml
memtruth-sdk/: README.md
model-packs/: opendataloader-hybrid-models.json  ppocr-v5-mobile-mnn.json
runtime/doctruth-runtime/: Cargo.toml  README.md
runtime/doctruth-runtime/examples/: mnn_promotion_smoke_worker.rs  onnx_reference_smoke_worker.rs
runtime/doctruth-runtime/src/: lib.rs  main.rs  opendataloader_java_backend.rs  opendataloader_parity.rs  opendataloader_prediction.rs  opendataloader_probes.rs  opendataloader_report.rs  opendataloader_temporary_repairs.rs
runtime/doctruth-runtime/tests/: benchmark_corpus_contract.rs  borderless_table_contract.rs  library_contract.rs  model_worker_contract.rs  opendataloader_java_backend_contract.rs  opendataloader_line_paragraph_contract.rs  opendataloader_model_runtime_contract.rs  opendataloader_parity_matrix_contract.rs  opendataloader_prediction_contract.rs  opendataloader_python_boundary_contract.rs  opendataloader_structure_contract.rs  opendataloader_table_processor_contract.rs  opendataloader_text_processor_contract.rs  opendataloader_triage_contract.rs  protocol_contract.rs
rust/: Cargo.toml
rust/crates/memtruth-chunker/src/: lib.rs
rust/crates/memtruth-contracts/: Cargo.toml
rust/crates/memtruth-contracts/src/: lib.rs
rust/crates/memtruth-projector/src/: lib.rs
rust/crates/memtruth-projector/tests/: fts_mapping.rs
rust/crates/memtruth-vespa/tests/: cli.rs
scripts/: check-doctruth-mnn-pack-readiness.sh  check-no-python-defaults.sh  check-repository-layout.sh  compare-doctruth-parser-references.py  compile-quickstart.sh  doctruth-onnx-model-worker  doctruth-preprocess-tensor-probe.py  doctruth-rapidocr-mnn-worker  doctruth-slanext-table-worker  doctruth_onnx_worker_lib.py  doctruth_opendataloader_hybrid_oracle.py  doctruth_opendataloader_prediction.py  fetch-doctruth-model-pack.py  install-cli.sh  package-cli-release.sh  prepare-doctruth-mnn-model-pack.sh  run-doctruth-mnn-promotion-bench.sh  (+68 more)
(+523 files in other folders)
