[workspace]
members = [
    "crates/memtruth-chunker",
    "crates/memtruth-contracts",
    "crates/memtruth-projector",
    "crates/memtruth-vespa"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
memtruth-contracts = { path = "crates/memtruth-contracts" }
memtruth-projector = { path = "crates/memtruth-projector" }
