[package]
name = "doctruth-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
pdf_oxide = { version = "0.3.64", default-features = false, features = ["legacy-crypto", "rendering"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
