[package]
name = "doctruth-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = []
mnn-native = ["dep:mnn_rs"]

[dependencies]
pdf_oxide = { version = "0.3.64", default-features = false, features = ["legacy-crypto", "rendering"] }
serde_json = "1.0"
sha2 = "0.10"
mnn_rs = { package = "mnn-rs", version = "0.1.5", optional = true, default-features = false, features = ["cpu", "static", "use-prebuilt"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
